plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0-SNAPSHOT'

}
apply plugin: 'io.spring.dependency-management'
group = 'learning'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// https://mvnrepository.com/artifact/org.postgresql/postgresql
//	runtimeOnly 'org.postgresql:postgresql'
		implementation 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'


}

//tasks.withType(JavaCompile).configureEach {
//	options.compilerArgs.add('--add-opens')
//	options.compilerArgs.add('java.base/java.lang=ALL-UNNAMED')
//}